tests/ui/feature-gates/feature-gate-address_space.stderr
error[E0658]: the `#[address_space]` attribute is an experimental feature
  --> $DIR/feature-gate-address_space.rs:1:1
   |
LL | #[address_space(0)]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information
   = help: add `#![feature(address_space)]` to the crate attributes to enable

error[E0658]: the `#[address_space]` attribute is an experimental feature
  --> $DIR/feature-gate-address_space.rs:5:5
   |
LL |     #[address_space(0)]
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information
   = help: add `#![feature(address_space)]` to the crate attributes to enable

error[E0658]: the `#[address_space]` attribute is an experimental feature
  --> $DIR/feature-gate-address_space.rs:9:1
   |
LL | #[address_space(65_536)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information
   = help: add `#![feature(address_space)]` to the crate attributes to enable

error: address space value in `address_space` is too large: `65536`
  --> $DIR/feature-gate-address_space.rs:9:1
   |
LL | #[address_space(65_536)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the value may not exceed `u16::MAX`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
